--- a/src/app/shared/components/add-order/add-order.component.html
+++ b/src/app/shared/components/add-order/add-order.component.html
@@ -1,4 +1,4 @@
 <button class = "addOrderBtn" mat-icon-button (click) = "emitClicked()">        
     <mat-icon class="accent-fg">add_circle_outline</mat-icon>
-    {{ 'ACTIONS.ADD_ORDER' | translate }}                     
+    <span class="resSpan">{{ 'ACTIONS.ADD_ORDER' | translate }} </span>                    
 </button> 
