--- a/src/app/shared/components/add-order/add-order.component.scss
+++ b/src/app/shared/components/add-order/add-order.component.scss
@@ -16,4 +16,15 @@ app-add-order {
         color: white !important;
         font-size: 21px !important;
     }
+
+    @media (max-width: 400px) {
+        .addOrderBtn {
+            width: 50px;
+            border-radius: 50%;
+            padding: 0 10px;            
+        }
+        .resSpan {
+            display: none;
+        }
+    }
 }
