--- a/src/app/feature/base-components/attachment/mat-file-upload/matFileUploadQueue/matFileUploadQueue.component.html
+++ b/src/app/feature/base-components/attachment/mat-file-upload/matFileUploadQueue/matFileUploadQueue.component.html
@@ -1,4 +1,6 @@
 <ng-content></ng-content>
 <br>
-<button mat-raised-button color="primary" *ngIf="files.length > 0" (click)="uploadAll()" style = "margin-right:20px;">{{ 'UPLOAD_ALL' | translate }}</button>
-<button mat-raised-button color="primary" *ngIf="files.length > 0" (click)="removeAll()">{{ 'REMOVE_ALL' | translate }}</button>
+<div class="uploadBtnDiv">
+    <button mat-raised-button color="primary" *ngIf="files.length > 0" (click)="uploadAll()">{{ 'UPLOAD_ALL' | translate }}</button>
+    <button mat-raised-button color="primary" *ngIf="files.length > 0" (click)="removeAll()">{{ 'REMOVE_ALL' | translate }}</button>
+</div>
