--- a/src/app/feature/item-master-data/item-master-data-detail/item-master-data-detail.component.html
+++ b/src/app/feature/item-master-data/item-master-data-detail/item-master-data-detail.component.html
@@ -154,7 +154,7 @@
                   {{ 'NAV.ATTACHE' | translate }}
                 </div>
               </ng-template>
-              <!-- <app-attachment [attachID]="item.attachID"></app-attachment> -->
+              <app-attachment [attachID]="item.attachID"></app-attachment>
           </mat-tab>
         </mat-tab-group>
     </div>
