--- a/src/app/feature/base-components/attachment/attachment.component.html
+++ b/src/app/feature/base-components/attachment/attachment.component.html
@@ -1,10 +1,10 @@
-<div class="p-24" fxLayout="row wrap">
-    <div  fxLayout="column" fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="65">
+<div class="pt-10" fxLayout="row wrap">
+    <div class="borderDiv" fxLayout="column" fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="75">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!-- Attach ID Column -->
             <ng-container matColumnDef="attachLineID" >
-                <th mat-header-cell *matHeaderCellDef class="w-100" > {{ 'LINE_ID' | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef class="w-100" > # </th>
                 <td mat-cell *matCellDef="let element"> {{element.attachLineID}} </td>
             </ng-container>
 
@@ -16,10 +16,10 @@
 
             <!-- File URL Column -->
             <ng-container matColumnDef="fileURL">
-                <th mat-header-cell *matHeaderCellDef> {{ 'FILE_URL' | translate }} </th>
+                <th mat-header-cell *matHeaderCellDef> {{ 'DISPLAY' | translate }} </th>
                 <td mat-cell *matCellDef="let element">
                     <a [href]="element.fileURL" target = "_blank">
-                        <mat-icon class="secondary-text s-48">attachment</mat-icon>
+                        <mat-icon class="secondary-text s-26">attachment</mat-icon>
                     </a>
                 </td>
             </ng-container>
@@ -46,10 +46,10 @@
             <ng-container matColumnDef="edit">
                 <th mat-header-cell *matHeaderCellDef>  {{ 'EDIT' | translate }}</th>
                 <td mat-cell *matCellDef="let element">
-                    <a (click)="editAttachLine(element)" href="javascript:void(0)">
-                        <mat-icon class="secondary-text s-48">edit</mat-icon>
-                    </a>
-
+                    <button (click)="editAttachLine(element)" [disabled] = "!attachID" href="javascript:void(0)">
+                        <!-- <mat-icon class="secondary-text s-48">edit</mat-icon> -->
+                        <mat-icon matSuffix class="disabled-text" class="primary-fg">edit</mat-icon> 
+                    </button>
                 </td>
             </ng-container>
 
@@ -57,28 +57,33 @@
             <ng-container matColumnDef="delete">
                 <th mat-header-cell *matHeaderCellDef>  {{ 'DELETE' | translate }} </th>
                 <td mat-cell *matCellDef="let element">
-                    <a (click)="deleteAttachLine(element.attachLineID)" href="javascript:void(0)">
-                        <mat-icon class="secondary-text s-48">delete</mat-icon>
-                    </a>
+                    <button (click)="deleteAttachLine(element.attachLineID)" [disabled] = "!attachID" href="javascript:void(0)">
+                        <!-- <mat-icon class="secondary-text s-48">delete</mat-icon> -->
+                        <mat-icon matSuffix class="disabled-text" class="red-fg">highlight_off</mat-icon> 
+                    </button>
                 </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-    </div>
-    <div fxLayout="column" fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="35" class = "pl-24">
-        <input hidden  #hiddenUploader type="file" [fileUploadInputFor]= "fileUploadQueue" multiple/>
-        <div [fileUploadInputFor]="fileUploadQueue" class="upload-drop-zone" (click)="hiddenUploader.click()">
-            <div class = "">
-               {{ 'DROP_CLICK_FILE_UPLOAD' | translate }}
-            </div>
-        </div>
         <div>
             <mat-file-upload-queue #fileUploadQueue multiple>
                 <mat-file-upload [file]="file" [id]="i" *ngFor="let file of fileUploadQueue.files; let i = index" [attachID]="attachID"></mat-file-upload>
             </mat-file-upload-queue>
         </div>
     </div>
+    <div fxLayout="column" fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="25" class = "pl-24">
+        <input hidden  #hiddenUploader type="file" [fileUploadInputFor]= "fileUploadQueue" multiple/>
+        <div [fileUploadInputFor]="fileUploadQueue" class="upload-drop-zone" (click)="hiddenUploader.click()">
+            <div class = "uploadLabel">
+                <img src="assets/icons/upload.png" alt="upload">
+                <p>{{ 'DROP_FILE_HERE' | translate }} </p>
+                <p>{{ 'OR_CLICK_TO_UPLOAD' | translate }} </p>
+            </div>
+        </div>
+        
+    </div>
+    
 </div>
 
