--- a/src/app/feature/sale-order/sale-order-detail/sale-order-detail.component.html
+++ b/src/app/feature/sale-order/sale-order-detail/sale-order-detail.component.html
@@ -119,7 +119,7 @@
                     {{ 'NAV.ATTACHE' | translate }}
                   </div>
                 </ng-template>
-                <!-- <app-attachment [attachID]="saleOrder.attachID"></app-attachment> -->
+                <app-attachment [attachID]="saleOrder.attachID"></app-attachment>
             </mat-tab>
         </mat-tab-group>
 
